--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "ownerName": "Arthur",
     "instagram" : "https://instagram.com/Reihan_Arthur",
     "botName": "Arthur-Mdོ ",
-    "footer": "api.zeeoneofc.xyz",
+    "footer": "https://wa.me/6283156715878",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
     "BotKey": "V12",
