--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "ownerNumber": ["622150996855@s.whatsapp.net","622150996855@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
-    "botName": "Haruka-Mdོ ",
-    "footer": "api.zeeoneofc.xyz",
+    "ownerNumber": ["6283156715878@s.whatsapp.net","6283193428314@s.whatsapp.net"],
+    "ownerName": "Arthur",
+    "instagram" : "https://instagram.com/Reihan_Arthur",
+    "botName": "Arthur-Md ",
+    "footer": "https://wa.me/6283156715878",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
     "BotKey": "V12",
